projet_GOCass/tests/tests/good/print/nothing.go
package main

func main() {}

/*
== Expected program output ==
*/
